# TinySAT

./: .gitignore  Note.md  PreservingSat.md  README.md  TinySAT.opam  dune-project
algs/: brute_force.ml  brute_force.mli  certificate.ml  certificate.mli  common.mli  dpll.ml  dpll.mli  dune  printers.ml
data/: uf20-01.cnf
lib/: defs.ml  dune  parsed_struct.ml  parser.ml  util.ml
lib/Algs/: brute_force.ml  dpll.ml  dune
lib/Basis/: angstrom_parser.ml  dune  parser.ml  types.ml  util.ml
test/: dune
test/algs_test/: brute_force_test.ml  check_assignment.ml  checkers.ml  dpll_test.ml  dune
test/algs_test/data/: 100vars_sat.dimacs
test/test_cases/sat/: ex_02.dimacs  sat1.dimacs  uf20-01000.dimacs  uf50-01000.cnf
test/test_cases/unsat/: dubois20.dimacs  gpt1.dimacs  handcraft1.dimacs
