(lang dune 3.12)

(name TinySAT)

(generate_opam_files true)

(source
 (github tomaz1502/TinySAT))

(authors "Tomaz Mascarenhas")

(maintainers "Tomaz Mascarenhas")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name TinySAT)
 (synopsis "This is a toy SAT solver I am implementing in order to learn OCaml.")
 (description "This is a toy SAT solver I am implementing in order to learn OCaml.")
 (depends ocaml dune)
)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
